--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./src/components/character-item.css">
+    <link rel="stylesheet" href="./src/components/character-list.css">
     <title>Airbender Characters</title>
 </head>
 <body>
